# DnDMusic

./: README.md  package.json  pyproject.toml  rpg_auto_dj_ui_mockup_react (1).jsx  rpg_music_ai_tz_genres (1).md
app/: __init__.py  __main__.py  ai_client.py  api.py  cache.py  config.py  models.py  music_service.py  player_errors.py  youtube_client.py  youtube_search.py
app/static/css/: ui.css  ui.css.bak
app/static/js/: app.js  logger.js  player.js  results.js  scenes.js  search.js  speech.js  state.js  theme.js  whisper-worker.js  whisper.js
app/templates/: ui.html
config/: default.yaml
tests/: test_ai_client.py  test_api.py  test_config.py  test_music_service.py  test_player_functional.py
tests/js/: player_functional.test.mjs  speech.test.mjs
